WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
294868
AX: accessibility/clip-path-bounding-box.html fails in macOS Tahoe because AccessibilityNodeObject and AccessibilityRenderObject don't explicitly enforce a minimum size for controls
https://bugs.webkit.org/show_bug.cgi?id=294868
Summary
AX: accessibility/clip-path-bounding-box.html fails in macOS Tahoe because Ac...
Tyler Wilcock
Reported
2025-06-23 16:13:08 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-06-23 16:13:17 PDT
<
rdar://problem/154135798
>
Tyler Wilcock
Comment 2
2025-06-23 16:21:11 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/47087
EWS
Comment 3
2025-06-23 21:22:33 PDT
Committed
296550@main
(f79edb6f8fda): <
https://commits.webkit.org/296550@main
> Reviewed commits have been landed. Closing PR #47087 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug